# Jarvis-Agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/plans/: 2026-02-05-phase1-perception-memory-design.md  2026-02-06-phase2-memory-reasoning-design.md  2026-02-07-phase3-tool-system-design.md  2026-02-08-phase4-evolution-design.md  2026-03-04-phase45-context-window-design.md  2026-03-04-phase5-skill-evolution-design.md
ppt/: generate-pptx-en.js  generate-pptx.js  jarvis-agent-en.pptx  jarvis-agent.pptx  package-lock.json  package.json
ppt/slides/: slide01-title.html  slide02-problem.html  slide03-insight.html  slide04-five-dimensions.html  slide05-phase1.html  slide06-phase2.html  slide07-phase3.html  slide08-phase4.html  slide09-architecture.html  slide10-demo.html  slide11-roadmap.html  slide12-closing.html
ppt/slides-en/: slide01-title.html  slide02-problem.html  slide03-insight.html  slide04-five-dimensions.html  slide05-phase1.html  slide06-phase2.html  slide07-phase3.html  slide08-phase4.html  slide09-architecture.html  slide10-demo.html  slide11-roadmap.html  slide12-closing.html
scripts/: com.polly.jarvis.plist  deploy.sh  install_daemon.sh  jarvis-agent.service  uninstall_daemon.sh
src/: __init__.py  cli.py  config.py  main.py
src/cli/: __init__.py  chat.py  common.py  daemon_cmds.py  evolution_cmds.py  explore_cmds.py  memory_cmds.py  tool_cmds.py
src/daemon/: __init__.py  daemon.py  discovery.py  notifier.py
src/evolution/: __init__.py  metacognition.py  pattern_detector.py  (+4 more)
tests/: test_phase1.py  test_phase3.py  test_phase4.py
(+30 files in other folders)
